# zsh-yarn-autocompletions

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  build.sh  install.sh  package.json  yarn-autocompletions.example.yml  yarn-autocompletions.plugin.zsh  zplug.sh  zplug.zsh
.github/workflows/: CI.yml  Release.yml
src/: deps.rs  main.rs  scripts.rs
yarn-deps/: Cargo.toml  package.json
yarn-deps/src/: main.rs
yarn-scripts/: Cargo.toml  package.json
yarn-scripts/src/: main.rs
