[package]
name = "yarn-autocompletions"
version = "2.0.0"
authors = ["Pig Fang <g-plane@hotmail.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.5", features = ["attributes"] }
dirs = "1.0"
itertools = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
